Fix header, product background images and footer spacing

--- a/styles.css
+++ b/styles.css
@@ -30,21 +30,37 @@ h3 {
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+/* Header styles */
+
+.header {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 1.5rem;
+}
+
+.logo {
+  width: 145px;
+}
+
+.menu-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+/* Hero styles */
+
 .hero {
-  height: 650px;
+  height: 100vh;
   padding: 0 1.5rem;
-  background: no-repeat center url("./images/desktop/image-hero.jpg");
+  background: no-repeat center url("./images/mobile/image-hero.jpg");
   background-size: cover;
   color: var(--white);
   display: grid;
   place-content: center;
-}
-
-.hero-logo {
-  position: absolute;
-  top: 1.5rem;
-  left: 1.5rem;
-  width: 145px;
 }
 
 .heading__main {
@@ -68,6 +84,7 @@ h3 {
   margin-top: 3rem;
   margin-bottom: 2rem;
   text-align: center;
+  font-weight: 300;
 }
 
 .about__text {
@@ -75,8 +92,11 @@ h3 {
   line-height: 2;
 }
 
+/* Product styles */
+
 .products {
   padding: 2rem;
+  margin-bottom: 4rem;
 }
 
 .product-grid {
@@ -87,6 +107,7 @@ h3 {
 
 .product {
   padding: 3.25rem 1rem 1rem 1rem;
+  background: no-repeat center/cover;
 }
 
 .product__title {
@@ -115,39 +136,43 @@ h3 {
 .product__link:hover {
   color: var(--white);
   background-color: var(--black);
+  transition: background-color 300ms ease-in;
 }
 
 .product-1 {
-  background: center no-repeat url("./images/mobile/image-deep-earth.jpg");
+  background-image: url("./images/mobile/image-deep-earth.jpg");
 }
+
 .product-2 {
-  background: center no-repeat url("./images/mobile/image-night-arcade.jpg");
+  background-image: url("./images/mobile/image-night-arcade.jpg");
 }
 .product-3 {
-  background: center no-repeat url("./images/mobile/image-soccer-team.jpg");
+  background-image: url("./images/mobile/image-soccer-team.jpg");
 }
 .product-4 {
-  background: center no-repeat url("./images/mobile/image-grid.jpg");
+  background-image: url("./images/mobile/image-grid.jpg");
 }
 .product-5 {
-  background: center no-repeat url("./images/mobile/image-from-above.jpg");
+  background-image: url("./images/mobile/image-from-above.jpg");
 }
 .product-6 {
-  background: center no-repeat url("./images/mobile/image-pocket-borealis.jpg");
+  background-image: url("./images/mobile/image-pocket-borealis.jpg");
 }
 .product-7 {
-  background: center no-repeat url("./images/mobile/image-curiosity.jpg");
+  background-image: url("./images/mobile/image-curiosity.jpg");
 }
 
 .product-8 {
-  background: center no-repeat url("./images/mobile/image-fisheye.jpg");
+  background-image: url("./images/mobile/image-fisheye.jpg");
 }
+
+/* Footer styles */
 
 .footer {
   background-color: var(--black);
   color: var(--white);
   text-align: center;
-  padding: 2rem 1.5rem;
+  padding: 2.5rem 1.5rem;
 }
 
 .footer__logo {
@@ -162,6 +187,8 @@ h3 {
 .footer__link {
   color: var(--white);
   text-decoration: none;
+  display: inline-block;
+  margin-bottom: 1.5rem;
 }
 
 .footer__social-links-wrapper {
@@ -170,7 +197,7 @@ h3 {
 }
 
 .footer__social-links {
-  margin: 2rem;
+  margin: 2rem 1rem 1rem 1rem;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -183,6 +210,8 @@ h3 {
 
 .footer__copyright {
   margin-bottom: 1.5rem;
+  color: var(--dark-gray);
+  font-weight: 400;
 }
 
 .footer__attribution {
